Switch to CMake

--- a/archive/.vscode/launch.json
+++ b/archive/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/{{BINARY_NAME}}",
@@ -24,7 +24,7 @@
             ]
         },
         {
-            "name": "g++ - Build and Debug",
+            "name": "Build and Debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/{{BINARY_NAME}}",
@@ -41,7 +41,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: g++ build project",
+            "preLaunchTask": "CMake Build Project",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
