assume cmake and gdb are in path

--- a/archive/.vscode/launch.json
+++ b/archive/.vscode/launch.json
@@ -42,7 +42,7 @@
                 }
             ],
             "preLaunchTask": "CMake Build Project",
-            "miDebuggerPath": "/usr/bin/gdb"
+            "miDebuggerPath": "gdb"
         }
     ]
 }
