update to use build directory

--- a/archive/.vscode/launch.json
+++ b/archive/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/{{BINARY_NAME}}",
+            "program": "${workspaceFolder}/build/bin/{{BINARY_NAME}}",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}build/bin",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -27,10 +27,10 @@
             "name": "Build and Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/{{BINARY_NAME}}",
+            "program": "${workspaceFolder}/build/bin/{{BINARY_NAME}}",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/build/bin",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
